[package]
name = "reglite"
authors = ["Caido Labs Inc. <dev@caido.io>"]
repository = "https://github.com/caido/reglite"
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]
sqlite-loadable = { git = "https://github.com/caido/dependency-sqlite-loadable-rs", branch = "caido", default-features = false }
regex = "1"

[features]
default = ["static", "ignore-invalid"]
dynamic = ["sqlite-loadable/dynamic"]
static = ["sqlite-loadable/static"]
ignore-invalid = []
